<resources>
    <string name="app_name">NUMAD24Sp_Group4UniLink</string>
    <string name="enter_your_northeastern_email">Enter your northeastern email</string>
    <string name="new_user">New User?\nRegister here</string>
    <string name="enter_password">Enter password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login Now!</string>
    <string name="enter_firstname">Enter first name</string>
    <string name="enter_lastname">Enter last name</string>
    <string name="login_here">Existing User?\nLogin here</string>
    <string name="enter_northeastern_email">Enter northeastern email</string>
    <string name="login">Login</string>
</resources>